more lang updates

--- a/locales/sv.json
+++ b/locales/sv.json
@@ -1,5 +1,11 @@
 {
     "Logo": "Logo",
     "1 min read": "1 minuts läsning",
-    "% min read": "% minuters läsning"
+    "% min read": "% minuters läsning",
+    "More in": "Mer i",
+    "No posts": "Inga inlägg",
+    "1 post": "1 inlägg",
+    "See all % posts": "Se alla % inlägg",
+    "Latest Posts": "Senaste inläggen",
+    "% posts": "% inlägg"
 }
