Tag template - More SV localization

--- a/locales/sv.json
+++ b/locales/sv.json
@@ -7,5 +7,7 @@
     "1 post": "1 inlägg",
     "See all % posts": "Se alla % inlägg",
     "Latest Posts": "Senaste inläggen",
-    "% posts": "% inlägg"
+    "% posts": "% inlägg",
+    "A collection of": "En samling av",
+    "no posts": "inga inlägg"
 }
